policies/docker-cis-4.7-alert-on-update-instruction.yaml
apiVersion: config.stackrox.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: docker-cis-4.7-alert-on-update-instruction
spec:
  categories:
  - Docker CIS
  criteriaLocked: true
  description: Ensure update instructions are not used alone in the Dockerfile
  enforcementActions: []
  eventSource: NOT_APPLICABLE
  exclusions:
  - name: Don't alert on StackRox services
    deployment:
      name: ''
      scope:
        cluster: ''
        namespace: stackrox
        label: null
    image: null
    expiration: null
  isDefault: false
  lifecycleStages:
  - BUILD
  - DEPLOY
  mitreAttackVectors: []
  mitreVectorsLocked: true
  policyName: 'GitOps - Docker CIS 4.7: Alert on Update Instruction'
  policySections:
  - sectionName: ''
    policyGroups:
    - fieldName: Dockerfile Line
      booleanOperator: OR
      negate: false
      values:
      - value: RUN=(/bin/sh -c)?\s*apk update\s*
      - value: RUN=(/bin/sh -c)?\s*apt update\s*
      - value: RUN=(/bin/sh -c)?\s*apt-get update\s*
      - value: RUN=(/bin/sh -c)?\s*yum update\s*
  rationale: Adding update instructions in a single line on the Dockerfile will cause
    the update layer to be cached. When you then build any image later using the same
    instruction, this will cause the previously cached update layer to be used, potentially
    preventing any fresh updates from being applied to later builds.
  remediation: Use update instructions together with install instructions and version
    pinning for packages while installing them. This prevents caching and forces the
    extraction of the required versions.
  scope: []
  severity: LOW_SEVERITY
  disabled: false
